disable autocapitalize and autocorrect on filter input

--- a/client/views/passwords/passwordlist.html
+++ b/client/views/passwords/passwordlist.html
@@ -5,7 +5,7 @@
       <a href="/password/new" class="btn btn-primary create-button"><i class="glyphicon glyphicon-plus"></i> Create New</a>
     </div>
     <div class="col-sm-6 col-sm-pull-6">
-      <input type="text" class="form-control" id="filter" placeholder="Filter results">
+      <input type="text" class="form-control" id="filter" placeholder="Filter results" autocapitalize="off" autocorrect="off">
     </div>
   </div>
 </div>
