initial notes commit

--- a/client/views/layouts/default.html
+++ b/client/views/layouts/default.html
@@ -23,3 +23,21 @@
   {{> footer}}
 
 </template>
+
+<template name="layout-nocontainer">
+
+  {{> nav}}
+
+  <div class="content">
+    <div class="nocontainer">
+      <div class="row">
+
+    {{> yield}}
+
+      </div>
+    </div>
+  </div>
+
+  {{> footer}}
+
+</template>
