--- a/packages/pnotify/pnotify.custom.css
+++ b/packages/pnotify/pnotify.custom.css
@@ -5,86 +5,56 @@ Link    : http://sciactive.com/pnotify/
 */
 /* -- Notice */
 .ui-pnotify {
-  top: 70px;
-  right: 15px;
-  position: absolute;
-  height: auto;
-  z-index: 9999;
+top: 25px;
+right: 25px;
+position: absolute;
+height: auto;
+/* Ensures notices are above everything */
+z-index: 9999;
 }
 /* Hides position: fixed from IE6 */
 html > body > .ui-pnotify {
-  position: fixed;
+position: fixed;
 }
 .ui-pnotify .ui-pnotify-shadow {
-  -webkit-box-shadow: 0px 2px 10px rgba(50, 50, 50, 0.5);
-  -moz-box-shadow: 0px 2px 10px rgba(50, 50, 50, 0.5);
-  box-shadow: 0px 2px 10px rgba(50, 50, 50, 0.5);
+-webkit-box-shadow: 0px 2px 10px rgba(50, 50, 50, 0.5);
+-moz-box-shadow: 0px 2px 10px rgba(50, 50, 50, 0.5);
+box-shadow: 0px 2px 10px rgba(50, 50, 50, 0.5);
 }
 .ui-pnotify-container {
-  background-position: 0 0;
-  padding: .8em;
-  height: 100%;
-  margin: 0;
+background-position: 0 0;
+padding: .8em;
+height: 100%;
+margin: 0;
 }
 .ui-pnotify-sharp {
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
+-webkit-border-radius: 0;
+-moz-border-radius: 0;
+border-radius: 0;
 }
 .ui-pnotify-title {
-  display: block;
-  margin-bottom: .4em;
-  margin-top: 0;
+display: block;
+margin-bottom: .4em;
+margin-top: 0;
 }
 .ui-pnotify-text {
-  display: block;
+display: block;
 }
 .ui-pnotify-icon, .ui-pnotify-icon span {
-  display: block;
-  float: left;
-  margin-right: .2em;
+display: block;
+float: left;
+margin-right: .2em;
 }
 /* Alternate stack initial positioning. */
 .ui-pnotify.stack-topleft, .ui-pnotify.stack-bottomleft {
-  left: 25px;
-  right: auto;
+left: 25px;
+right: auto;
 }
 .ui-pnotify.stack-bottomright, .ui-pnotify.stack-bottomleft {
-  bottom: 25px;
-  top: auto;
+bottom: 25px;
+top: auto;
 }
 .ui-pnotify-closer, .ui-pnotify-sticker {
-  float: right;
-  margin-left: .2em;
-}
-
-/**************************************************/
-
-.ui-pnotify.custom .ui-pnotify-container {
-  background-color: #404040 !important;
-  background-image: none !important;
-  border: none !important;
-  -moz-border-radius: 6px;
-  -webkit-border-radius: 6px;
-  border-radius: 6px;
-}
-.ui-pnotify.custom .ui-pnotify-title, .ui-pnotify.custom .ui-pnotify-text {
-  /*font-family: Arial, Helvetica, sans-serif !important;*/
-  text-shadow: 2px 2px 3px black !important;
-  font-size: 11pt !important;
-  color: #fff !important;
-  padding-left: 15px !important;
-  line-height: 1 !important;
-  text-rendering: geometricPrecision !important;
-}
-.ui-pnotify.custom .ui-pnotify-title {
-  font-weight: bold;
-}
-.ui-pnotify.custom .ui-pnotify-icon {
-  float: left;
-}
-.ui-pnotify.custom .picon {
-  margin: 3px;
-  width: 33px;
-  height: 33px;
+float: right;
+margin-left: .2em;
 }
