--- a/packages/pnotify/pnotify.user.css
+++ b/packages/pnotify/pnotify.user.css
@@ -1,13 +1,18 @@
 .ui-pnotify {
-    top: 65px;
-    right: 5px;
+  top: 65px;
+  right: 5px;
 }
 
 .ui-pnotify.common .alert {
-    /*background-color: #ddd;*/
+  /*background-color: #ddd;*/
+  padding: 10px;
 }
 
 .ui-pnotify .alert {
-    margin: 2px;
-    border-radius: 4px;
+  margin: 2px;
+  border-radius: 4px;
+}
+
+.ui-pnotify-title {
+  margin-bottom: 0;
 }
