fixed broken link

--- a/packages/passwords/views/passwordlist.html
+++ b/packages/passwords/views/passwordlist.html
@@ -2,7 +2,7 @@
 <div class="clearfix">
   <div class="row">
     <div class="col-sm-6 col-sm-push-6">
-      <a href="/password/new" class="btn btn-primary create-button"><i class="glyphicon glyphicon-plus"></i> Create New</a>
+      <a href="/passwords/new" class="btn btn-primary create-button"><i class="glyphicon glyphicon-plus"></i> Create New</a>
     </div>
     <div class="col-sm-6 col-sm-pull-6">
       <input type="text" class="form-control" id="filter" placeholder="Filter results" autocapitalize="off" autocorrect="off">
