added autoform to passwords

--- a/packages/passwords/views/password.html
+++ b/packages/passwords/views/password.html
@@ -12,49 +12,96 @@
     </div>
   </div>
 </div>
+
+{{#autoForm collection="Passwords" doc=this id="passwordForm" type="update"}}
+
 <div class="row">
   <div class="col-sm-6">
-    <div class="form-group">
-      <label>Nickname:</label>
-      <input type="text" id="nickname" name="nickname" class="form-control" value="{{nickname}}">
-    </div>
+  {{> afQuickField name="nickname"}}
   </div>
   <div class="col-sm-6">
-    <div class="form-group">
-      <label>Url:</label>
-      <input type="text" id="url" name="url" class="form-control" value="{{url}}" disabled="disabled">
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-sm-6">
-    <div class="form-group">
-      <label>Username:</label>
-      <input type="text" id="username" name="username" class="form-control" value="{{username}}" disabled="disabled">
-    </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="form-group">
-      <label>Password:</label>
-      <input type="text" id="password" name="password" class="form-control" value="{{password}}" disabled="disabled">
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <div class="form-group">
-      <label>Notes:</label>
-      <textarea id="notes" name="notes" class="form-control" rows="6" value="{{notes}}" disabled="disabled"></textarea>
-    </div>
-  </div>
-</div>
-<div class="buttons clearfix">
-  <div class="left-col">
-    <button class="btn save btn-success" id="save"><i class="glyphicon glyphicon-check"></i> Save</button>
-    <button class="btn btn-default delete" id="confirmDelete"><i class="glyphicon glyphicon-trash"></i> Delete</button>
-    <button class="btn btn-default decrypt" id="encrypt" >Decrypt</button>
+  {{> afQuickField name="url"}}
   </div>
 </div>
 
+<div class="row">
+  <div class="col-sm-6">
+  {{> afQuickField name="username"}}
+  </div>
+  <div class="col-sm-6">
+  {{> afQuickField name="password"}}
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-12">
+  {{> afQuickField name="notes" rows=10}}
+  </div>
+</div>
+
+<div class="buttons clearfix">
+  <div class="left-col">
+    <button type="submit" class="btn btn-success save" id="save"><i class="glyphicon glyphicon-check"></i> Save</button>
+    <button type="button" class="btn btn-default delete" id="confirmDelete"><i class="glyphicon glyphicon-trash"></i> Delete</button>
+    <button type="button" class="btn btn-default decrypt" id="encrypt" >Decrypt</button>
+  </div>
+</div>
+
+{{/autoForm}}
+
+</template>
+
+
+
+<template name="passwordnew">
+
+<h2>{{nickname}}</h2>
+
+<div class="row">
+  <div class="col-md-12">
+    <div class="form-group">
+      <label>Encryption Key:</label>
+      <form id="encryptform">
+        <input type="password" id="key" class="form-control" placeholder="The longer, the better...20+ characters is good">
+      </form>
+    </div>
+  </div>
+</div>
+
+{{#autoForm collection="Passwords" id="passwordNewForm" type="insert"}}
+
+<div class="row">
+  <div class="col-sm-6">
+  {{> afQuickField name="nickname"}}
+  </div>
+  <div class="col-sm-6">
+  {{> afQuickField name="url"}}
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-6">
+  {{> afQuickField name="username"}}
+  </div>
+  <div class="col-sm-6">
+  {{> afQuickField name="password"}}
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-12">
+  {{> afQuickField name="notes" rows=10}}
+  </div>
+</div>
+
+<div class="buttons clearfix">
+  <div class="left-col">
+    <button type="submit" class="btn btn-success save" id="save"><i class="glyphicon glyphicon-check"></i> Save</button>
+    <button type="button" class="btn btn-default decrypt" id="encrypt" >Decrypt</button>
+    <button type="button" class="btn btn-default generate" id="generate" >Generate</button>
+  </div>
+</div>
+
+{{/autoForm}}
 
 </template>
