--- a/client/bootstrap/_flatly-custom.import.less
+++ b/client/bootstrap/_flatly-custom.import.less
@@ -23,3 +23,23 @@
 
 @list-group-border-radius: 8px;
 
+@has-error-color: @brand-danger;
+
+@pagination-color:                     @gray;
+@pagination-bg:                        @gray-light;
+@pagination-border:                    transparent;
+
+@pagination-hover-color:               @gray-dark;
+@pagination-hover-bg:                  darken(@gray-light, 15%);
+@pagination-hover-border:              transparent;
+
+@pagination-active-color:              #fff;
+@pagination-active-bg:                 darken(@gray-light, 15%);
+@pagination-active-border:             transparent;
+
+@pagination-disabled-color:            @gray-lighter;
+@pagination-disabled-bg:               lighten(@brand-success, 15%);;
+@pagination-disabled-border:           transparent;
+
+@pager-margin: 8px 0;
+@pager-border-radius: 3px;
