formatted style file; changed table padding

--- a/client/bootstrap/_flatly-custom.import.less
+++ b/client/bootstrap/_flatly-custom.import.less
@@ -25,6 +25,8 @@
 
 @has-error-color: @brand-danger;
 
+@table-cell-padding: 8px;
+
 @pagination-color:                     @gray;
 @pagination-bg:                        @gray-light;
 @pagination-border:                    transparent;
