big passwords update: added list view, merged edit and create views

--- a/packages/passwords/views/password.html
+++ b/packages/passwords/views/password.html
@@ -13,92 +13,41 @@
   </div>
 </div>
 
-{{#autoForm collection="Passwords" doc=this id="passwordForm" type="update"}}
+{{#autoForm collection="Passwords" doc=this id="passwordForm" type=formType}}
 
 <div class="row">
   <div class="col-sm-6">
   {{> afQuickField name="nickname"}}
   </div>
   <div class="col-sm-6">
-  {{> afQuickField name="url"}}
+  {{> afQuickField name="url" readonly=isEncrypted}}
   </div>
 </div>
 
 <div class="row">
   <div class="col-sm-6">
-  {{> afQuickField name="username"}}
+  {{> afQuickField name="username" readonly=isEncrypted}}
   </div>
   <div class="col-sm-6">
-  {{> afQuickField name="password"}}
+  {{> afQuickField name="password" readonly=isEncrypted}}
   </div>
 </div>
 
 <div class="row">
   <div class="col-sm-12">
-  {{> afQuickField name="notes" rows=10}}
+  {{> afQuickField name="notes" rows=10 readonly=isEncrypted}}
   </div>
 </div>
 
 <div class="buttons clearfix">
   <div class="left-col">
-    <button type="submit" class="btn btn-success save" id="save"><i class="glyphicon glyphicon-check"></i> Save</button>
+    <button type="submit" class="btn" id="save" {{saveButtonAttributes}}><i class="glyphicon glyphicon-check"></i> Save</button>
+    {{#if _id}}
     <button type="button" class="btn btn-default delete" id="confirmDelete"><i class="glyphicon glyphicon-trash"></i> Delete</button>
-    <button type="button" class="btn btn-default decrypt" id="encrypt" >Decrypt</button>
-  </div>
-</div>
-
-{{/autoForm}}
-
-</template>
-
-
-
-<template name="passwordnew">
-
-<h2>{{nickname}}</h2>
-
-<div class="row">
-  <div class="col-md-12">
-    <div class="form-group">
-      <label>Encryption Key:</label>
-      <form id="encryptform">
-        <input type="password" id="key" class="form-control" placeholder="The longer, the better...20+ characters is good">
-      </form>
-    </div>
-  </div>
-</div>
-
-{{#autoForm collection="Passwords" id="passwordNewForm" type="insert"}}
-
-<div class="row">
-  <div class="col-sm-6">
-  {{> afQuickField name="nickname"}}
-  </div>
-  <div class="col-sm-6">
-  {{> afQuickField name="url"}}
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-6">
-  {{> afQuickField name="username"}}
-  </div>
-  <div class="col-sm-6">
-  {{> afQuickField name="password"}}
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-12">
-  {{> afQuickField name="notes" rows=10}}
-  </div>
-</div>
-
-<div class="buttons clearfix">
-  <div class="left-col">
-    <button type="submit" class="btn btn-success save" id="save"><i class="glyphicon glyphicon-check"></i> Save</button>
-    <button type="button" class="btn btn-default decrypt" id="encrypt" >Decrypt</button>
-    <button type="button" class="btn btn-default generate" id="generate" >Generate</button>
+    {{else}}
+    <button type="button" class="btn btn-default generate" id="generate">Generate</button>
+    {{/if}}
+    <button type="button" class="btn btn-default decrypt" id="encrypt">{{encryptButtonLabel}}</button>
   </div>
 </div>
 
