--- a/packages/passwords/views/passwordlist.html
+++ b/packages/passwords/views/passwordlist.html
@@ -1,22 +1,5 @@
 <template name="passwordlist">
 
-<div class="clearfix">
-  <div class="row">
-    <div class="col-sm-6 col-sm-push-6">
-      <a href="/passwords/new" class="btn btn-primary create-button"><i class="glyphicon glyphicon-plus"></i> Create New</a>
-    </div>
-    <div class="col-sm-6 col-sm-pull-6">
-      <input type="text" class="form-control" id="filter" placeholder="Filter results" value="{{filter}}" autocapitalize="off" autocorrect="off">
-    </div>
-  </div>
-</div>
-
-<div class="list-default">
-  <ul>
-    {{#each passwordlist}}
-    <li><a href="/passwords/{{_id}}" class="password">{{nickname}}</a></li>
-    {{/each}}
-  </ul>
-</div>
+  {{> list listData }}
 
 </template>
