--- a/packages/app/layouts/nav.html
+++ b/packages/app/layouts/nav.html
@@ -22,23 +22,22 @@
         {{/each}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <!-- <li class=""><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li> -->
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> {{ currentUser.username }} <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="/profile">Account Profile</a></li>
-            <li class="divider"></li>
-            <li><a href="/logout" id="logout">Logout</a></li>
-          </ul>
+        <li>
+          <a href="/profile">
+            <span class="glyphicon glyphicon-user"></span>
+            {{ currentUser.username }}
+          </a>
         </li>
+        <li class="divider"></li>
+        <li><a href="/logout" id="logout">logout</a></li>
       </ul>
       {{else}}
       <ul class="nav navbar-nav">
         <li class="navbar-brand">ind.li</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class=""><a href="/login">Login</a></li>
-        <li class=""><a href="/register">Register</a></li>
+        <li class=""><a href="/login">login</a></li>
+        <li class=""><a href="/register">register</a></li>
       </ul>
       {{/if}}
     </div><!--/.nav-collapse -->
