change layouts name; added modules to nav

--- a/packages/app/layouts/nav.html
+++ b/packages/app/layouts/nav.html
@@ -16,9 +16,9 @@
         <li class="navbar-brand">ind.li</li>
         <li class=""><a href="/passwords">passwords</a></li>
         <li class=""><a href="/notes">notas</a></li>
-        <li class=""><a href="/contacts">contacts</a></li>
+        <!-- <li class=""><a href="/contacts">contacts</a></li> -->
         {{#each modules}}
-        <li class=""><a href="/{{path}}">{{label}}</a></li>
+        <li class=""><a href="/{{path}}">{{collection}}</a></li>
         {{/each}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
