--- a/packages/app/layouts/default.html
+++ b/packages/app/layouts/default.html
@@ -1,6 +1,6 @@
 <head>
   <title>ind.li</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <link href='//fonts.googleapis.com/css?family=Ubuntu:400,500' rel='stylesheet' type='text/css'>
 </head>
 
