--- a/packages/app/layouts/nav.html
+++ b/packages/app/layouts/nav.html
@@ -14,8 +14,9 @@
       {{#if currentUser}}
       <ul class="nav navbar-nav">
         <li class="navbar-brand">ind.li</li>
+        <li class=""><a href="/create">messages</a></li>
         <li class=""><a href="/passwords">passwords</a></li>
-        <li class=""><a href="/notes">notas</a></li>
+        <li class=""><a href="/notes">notes</a></li>
         <!-- <li class=""><a href="/contacts">contacts</a></li> -->
         {{#each modules}}
         <li class=""><a href="/{{path}}">{{collection}}</a></li>
@@ -34,6 +35,7 @@
       {{else}}
       <ul class="nav navbar-nav">
         <li class="navbar-brand">ind.li</li>
+        <li class=""><a href="/create">messages</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class=""><a href="/login">login</a></li>
