--- a/client/bootstrap/_flatly-custom.import.less
+++ b/client/bootstrap/_flatly-custom.import.less
@@ -10,6 +10,9 @@
 
 @border-radius-base: 3px;
 
+@form-group-margin-bottom: 10px;
+@zindex-modal-background: 1040;
+
 @input-border-focus: #ccc;
 
 @navbar-default-bg: @brand-secondary;
