uninstall notes package
remove notes from nav

--- a/packages/app/layouts/nav.html
+++ b/packages/app/layouts/nav.html
@@ -16,7 +16,7 @@
         <li class="navbar-brand">ind.li</li>
         <li class=""><a href="/create">messages</a></li>
         <li class=""><a href="/passwords">passwords</a></li>
-        <li class=""><a href="/notes">notes</a></li>
+        <!-- <li class=""><a href="/notes">notes</a></li> -->
         <!-- <li class=""><a href="/contacts">contacts</a></li> -->
         {{#each modules}}
         <li class=""><a href="/{{path}}">{{collection}}</a></li>
