add needed less variables

--- a/client/bootstrap/_flatly-custom.import.less
+++ b/client/bootstrap/_flatly-custom.import.less
@@ -48,3 +48,9 @@
 
 @pager-margin: 8px 0;
 @pager-border-radius: 3px;
+
+@btn-border-radius-base: 4px;
+@btn-border-radius-large: 5px;
+@btn-border-radius-small: 3px;
+
+@jumbotron-heading-font-size: 24px;
