add generate button to edit view; re-order buttons

--- a/packages/passwords/views/password.html
+++ b/packages/passwords/views/password.html
@@ -40,14 +40,15 @@
 </div>
 
 <div class="buttons clearfix">
-  <div class="left-col">
-    <button type="submit" class="btn" id="save" {{saveButtonAttributes}}><i class="glyphicon glyphicon-check"></i> Save</button>
-    {{#if _id}}
-    <button type="button" class="btn btn-default delete" id="confirmDelete"><i class="glyphicon glyphicon-trash"></i> Delete</button>
-    {{else}}
+  <div class="">
     <button type="button" class="btn btn-default generate" id="generate">Generate</button>
-    {{/if}}
-    <button type="button" class="btn btn-default decrypt" id="encrypt">{{encryptButtonLabel}}</button>
+    <div class="pull-right">
+      {{#if _id}}
+      <button type="button" class="btn btn-danger delete" id="confirmDelete"><i class="glyphicon glyphicon-trash"></i> Delete</button>
+      {{/if}}
+      <button type="submit" class="btn" id="save" {{saveButtonAttributes}}><i class="glyphicon glyphicon-check"></i> Save</button>
+      <button type="button" class="btn btn-default decrypt" id="encrypt">{{encryptButtonLabel}}</button>
+    </div>
   </div>
 </div>
 
