convert to FlowRouter

--- a/packages/app/layouts/default.html
+++ b/packages/app/layouts/default.html
@@ -19,7 +19,13 @@
     <div class="container">
       <div class="row">
 
-    {{> yield}}
+    {{#if currentUser}}
+      {{> Template.dynamic template=content}}
+    {{else}}{{#if protect}}
+      {{> login}}
+    {{else}}
+      {{> Template.dynamic template=content}}
+    {{/if}}{{/if}}
 
       </div>
     </div>
