--- a/packages/passwords/views/password.html
+++ b/packages/passwords/views/password.html
@@ -1,6 +1,6 @@
 <template name="password">
 
-<h2>{{nickname}}</h2>
+<h2>{{password.nickname}}</h2>
 
 <div class="row">
   <div class="col-md-12">
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-{{#autoForm collection="Passwords" doc=this id="passwordForm" type=formType}}
+{{#autoForm collection="Passwords" doc=password id="passwordForm" type=formType}}
 
 <div class="row">
   <div class="col-sm-6">
@@ -43,7 +43,7 @@
   <div class="">
     <button type="button" class="btn btn-default generate" id="generate">Generate</button>
     <div class="pull-right">
-      {{#if _id}}
+      {{#if password._id}}
       <button type="button" class="btn btn-danger delete" id="confirmDelete"><i class="glyphicon glyphicon-trash"></i> Delete</button>
       {{/if}}
       <button type="submit" class="btn" id="save" {{saveButtonAttributes}}><i class="glyphicon glyphicon-check"></i> Save</button>
