migrate app and password packages to imports

--- a/imports/passwords/views/password.html
+++ b/imports/passwords/views/password.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-{{#autoForm collection="Passwords" doc=password id="passwordForm" type=formType}}
+{{#autoForm collection=Passwords doc=password id="passwordForm" type=formType}}
 
 <div class="row">
   <div class="col-sm-6">
