--- a/client/layouts/nav-material.html
+++ b/client/layouts/nav-material.html
@@ -1,4 +1,4 @@
-<template name="nav">
+<template name="navMaterial">
 
 <ul id="user-dropdown" class="dropdown-content">
   <li><a href="/profile">profile</a></li>
