remove auth links from navbar

--- a/client/layouts/nav.html
+++ b/client/layouts/nav.html
@@ -34,12 +34,9 @@
       </ul>
       {{else}}
       <ul class="nav navbar-nav">
-        <li class="navbar-brand">ind.li</li>
-        <li class=""><a href="/create">messages</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class=""><a href="/login">login</a></li>
-        <li class=""><a href="/register">register</a></li>
+        <li class="navbar-brand">
+          <a href="/create">ind.li</a>
+        </li>
       </ul>
       {{/if}}
     </div><!--/.nav-collapse -->
